--- a/Site/Site-Estilo/index.html
+++ b/Site/Site-Estilo/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
   <title>VFeRoma</title>
 
   <!-- Bootstrap core CSS -->
@@ -68,9 +67,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">Trabalho Interdisciplinar</h2>
+          <p class="text-white-50">Trabalho interdisciplinar envolvendo 3 disciplinas do 4º período do curso de Sistemas de Informação.
+             Nosso <a href="https://github.com/mateusfilipe/VFeRoma">github</a> com as versões e codificações do projeto. O projeto foi feito por 5 alunos do 4º período VFeRoma(Bruno, Felipe, Rodrigo, Marcos, Mateus).</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
@@ -88,8 +87,8 @@
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <h4>Inspiração</h4>
+            <p class="text-black-50 mb-0">A ideia surgiu de uma observação dos estudantes  dentro do campus onde estudam, vendo uma quantidade de lixeiras presentes no campus o grupo teve a ideia de uma nova disposição das lixeiras. Baseando em teoria de grafos, vamos posiciona-las de uma forma que elas fiquem próximas a entradas e salas de aula.</p>
           </div>
         </div>
       </div>
@@ -129,7 +128,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
