--- a/Site/Site-Estilo/index.html
+++ b/Site/Site-Estilo/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+
   <title>VFeRoma</title>
 
   <!-- Bootstrap core CSS -->
@@ -45,7 +46,7 @@
             <a class="nav-link js-scroll-trigger" href="#signup">Contatos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Login</a> <!-- INSERIR O LINK DO LOGIN/CADASTRO-->
+            <a class="nav-link" href="login.html">Login</a> <!-- INSERIR O LINK DO LOGIN/CADASTRO-->
           </li>
         </ul>
       </div>
@@ -71,9 +72,7 @@
           <p class="text-white-50">Trabalho interdisciplinar envolvendo 3 disciplinas do 4º período do curso de Sistemas de Informação.
              Nosso <a href="https://github.com/mateusfilipe/VFeRoma">github</a> com as versões e codificações do projeto. O projeto foi feito por 5 alunos do 4º período VFeRoma(Bruno, Felipe, Rodrigo, Marcos, Mateus).</p>
         </div>
-      </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
-    </div>
+      <img src="img/rere.png" class="img-fluid" alt="">
   </section>
 
   <!-- Projects Section -->
@@ -87,8 +86,8 @@
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Inspiração</h4>
-            <p class="text-black-50 mb-0">A ideia surgiu de uma observação dos estudantes  dentro do campus onde estudam, vendo uma quantidade de lixeiras presentes no campus o grupo teve a ideia de uma nova disposição das lixeiras. Baseando em teoria de grafos, vamos posiciona-las de uma forma que elas fiquem próximas a entradas e salas de aula.</p>
+            <h4>Foco Principal</h4>
+            <p class="text-black-50 mb-0">O projeto seria aplicado em diversos Campus e Instalações em Institutos Federais. O foco inicial são os Campus localizados em Minas Gerais, e com o tempo apliar o projeot para atingir outros pontos do Brasil.</p>
           </div>
         </div>
       </div>
@@ -96,14 +95,14 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <img class="img-fluid" src="img/ifsaba.jpg" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <h4 class="text-white">Sabará</h4>
+                <p class="mb-0 text-white-50">Nosso primeiro "cliente" será o Campus IFMG Sabará, que é o justamente o local de estudo dos desenvolvedores da plataforma. E por meio de observação e praticidade de localização, os integrantes do grupo decidiramn começar por ele mesmo.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -114,20 +113,21 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <img class="img-fluid" src="img/ifbambu.jpg" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <h4 class="text-white">Bambuí</h4>
+                <p class="mb-0 text-white-50">Por questão de praticidade também, o próximo Campus a ser aplicado seria o Bambuí pela proximidade de local e de interação com o Campus, seria uma ótima escolha pra segundo local do projeto.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
           </div>
         </div>
       </div>
+
     </div>
   </section>
 
