--- a/Site/Web2/index.html
+++ b/Site/Web2/index.html
@@ -18,10 +18,8 @@
 
 </head>
 
-<body class="">
-
+<body>
     <!-- Cabeçalho -->
-
     <header>
         <nav class="navbar navbar-expand-lg navbar-light " id="mainNav">
             <div class="container">
