--- a/Site/Web2/cadastro.html
+++ b/Site/Web2/cadastro.html
@@ -101,7 +101,7 @@
 
    
     <!-- Rodapé -->
-    <footer class="row text-center mt-3 ml-0" id="rodape"> 
+    <footer class="row text-center mt-3 ml-0 p-0" id="rodape"> 
         <a class="navbar-brand js-scroll-trigger col mt-3 p-2 " id="nameproj">
             <svg width="33" height="26" viewBox="0 0 33 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
