--- a/Site/Web2/index.html
+++ b/Site/Web2/index.html
@@ -139,7 +139,7 @@
 
 
     <!-- Rodapé -->
-    <footer class="row text-center mt-3 ml-0" id="rodape"> 
+    <footer class="row text-center mt-3 ml-0 mr-0 mb-3 p-0" id="rodape"> 
         <a class="navbar-brand js-scroll-trigger col mt-3 p-2 " id="nameproj">
             <svg width="33" height="26" viewBox="0 0 33 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -147,7 +147,7 @@
                     fill="#005FF9" />
             </svg>
         TrashMap</a>
-        <div class="col mt-3 pr-2 ">
+        <div class="col mt-3 mr-0 ml-0 pr-0 pl-2">
             <a href="" class="media_social text-decoration-none">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                     <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
