--- a/Site/Web2/cadastro.html
+++ b/Site/Web2/cadastro.html
@@ -18,7 +18,7 @@
 </head>
 
 
-<body>
+<body >
     <!-- Cabeçalho -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light" id="subNav">
@@ -30,64 +30,70 @@
                             fill="#005FF9" />
                     </svg>
                     TrashMap</a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                <button class="navbar-toggler" style="color: #005FF9; border-color: #005FF9;" type="button" data-toggle="collapse"
                     data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                     aria-label="Toggle navigation">
                     Menu
-                    <i class="fas fa-bars"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
+                <div class="collapse navbar-collapse " id="navbarResponsive">
+                    <ul class="navbar-nav">
+                        <li class="nav-item ml-sm-auto ">
                             <a class="nav-link js-scroll-trigger" href="index.html">
-                                <i class="bi bi-house-door-fill"></i>Inicio</a>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#005FF9" class="bi bi-house-door" viewBox="0 0 16 16">
+                                    <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
+                                  </svg>
+                                  Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item ml-sm-auto ">
                             <a class="nav-link js-scroll-trigger" href="">
-                                <i class="bi bi-person"></i>Login</a>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#005FF9" class="bi bi-person" viewBox="0 0 16 16">
+                                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                                  </svg>Login</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-
     <form class="container-fluid" id="c_blue">
-        <h1>Cadastro</h1>
+        <h1 class="text-center p-4">Cadastro</h1>
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-12 col-lg-6">
                 <label>Nome Completo</label>
-                <input type="email" class="form-control" placeholder="Insira seu nome">
+                <input type="text" class="form-control " id="inputName" placeholder="Insira seu nome">
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-12 col-lg-6">
                 <label>Usuário</label>
-                <input type="password" class="form-control" placeholder="Crie um usuário">
+                <input type="text" class="form-control" id="inputUser"placeholder="Crie um usuário">
             </div>
         </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
+        <div class="form-row ">
+            <div class="form-group col-md-12 col-lg-6">
                 <label>Senha</label>
-                <input type="email" class="form-control" placeholder="">
+                <input type="password" class="form-control" id="inputPassword"  placeholder="Digite uma senha">
+                <small id="passwordHelpBlock" class="form-text text-light">
+                    Sua senha deve ter de 8-20 caracteres, tendo letras e números, sem espaços ou emoji.          </small>
             </div>
-            <div class="form-group col-md-6">
-                <label>Selecione seu IF</label>
-                <input type="password" class="form-control" placeholder="IF Campus Sabará">
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-12 col-lg-6">
                 <label>Confime sua senha</label>
-                <input type="email" class="form-control" placeholder="">
-            </div>
-            <div class="form-group col-md-6">
-                <label>Email</label>
-                <input type="password" class="form-control" placeholder="Digite seu e-mail">
+                <input type="password" id="inputPassword2"  class="form-control" placeholder="Confirme sua senha">
             </div>
         </div>
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-12 col-lg-6 ">
+                <label>Selecione seu IF</label>
+                <select id="inputIF" class="form-control" required>
+                    <option class="dropdown-item" selected >Selecione</option>
+                    <option class="dropdown-item">...</option>
+                  </select>
+            </div>
+            <div class="form-group col-md-12 col-lg-6">
+                <label>Email</label>
+                <input type="email" class="form-control" id="inputEmail" placeholder="Digite seu e-mail">
+            </div>
+            <div class="form-group col-md-12 col-lg-6">
                 <label for="inputCity">RA (Registro Acadêmico)</label>
-                <input type="text" class="form-control" id="inputCity" placeholder="Digite seu RA">
+                <input type="text" class="form-control" id="inputRA" placeholder="Digite seu RA">
             </div>
         </div>
         <div class="criarAlun">
@@ -100,35 +106,35 @@
 
     <!-- Rodapé -->
     <footer class="row text-center mt-3 ml-0 mr-0 mb-3 p-0" id="rodape"> 
-        <a class="navbar-brand js-scroll-trigger col mt-3 p-2 " id="nameproj">
+        <a class="navbar-brand js-scroll-trigger col d-none d-md-block mt-md-2 mt-lg-3 p-2 " id="nameproj">
             <svg width="33" height="26" viewBox="0 0 33 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M13.6321 0.688052L3.60807 4.00531C2.30584 4.43625 1.86612 4.69046 1.43338 5.0564C1.00063 5.42235 0.681173 5.86487 0.469898 6.39102C0.258623 6.91716 0.155533 7.41486 0.155533 8.78777V23.7661C0.155533 24.4336 0.224963 24.6756 0.35534 24.9196C0.485716 25.1637 0.677038 25.3552 0.92082 25.4857C1.1646 25.6162 1.40641 25.6857 2.07324 25.6857H30.8991C31.5659 25.6857 31.8077 25.6162 32.0515 25.4857C32.2953 25.3552 32.4866 25.1637 32.617 24.9196C32.7474 24.6756 32.8168 24.4336 32.8168 23.7661V8.75484C32.8168 7.39118 32.7157 6.89702 32.5077 6.37391C32.2998 5.85081 31.985 5.41008 31.5578 5.04383C31.1307 4.67759 30.6963 4.42185 29.4073 3.98053L19.8845 0.720191C18.5429 0.260842 18.0804 0.141504 17.5456 0.0618076C17.0108 -0.017889 16.5133 -0.0204465 15.9777 0.0537482C15.4421 0.127943 14.9784 0.24252 13.6321 0.688052ZM2.64876 23.19H10.9175V10.5599C10.9175 10.0077 11.3652 9.55994 11.9175 9.55994H21.0549C21.6071 9.55994 22.0549 10.0077 22.0549 10.5599V23.19H30.3236V8.75484C30.3236 7.78756 30.2885 7.54145 30.1912 7.29663C30.1326 7.14932 30.0562 7.04241 29.9359 6.93927C29.736 6.76787 29.5148 6.65496 28.6004 6.34192L19.0777 3.08157C17.9373 2.69116 17.5658 2.58802 17.1785 2.53029C16.8786 2.48561 16.6198 2.48428 16.3195 2.52588C15.9316 2.57962 15.559 2.67893 14.4147 3.05761L4.39068 6.37486C3.46809 6.68017 3.2448 6.79166 3.04237 6.96284C2.92043 7.06596 2.84278 7.17351 2.78324 7.32178C2.68442 7.5679 2.64876 7.81511 2.64876 8.78777V23.19Z"
                     fill="#005FF9" />
             </svg>
         TrashMap</a>
-        <div class="col mt-3 mr-0 ml-0 pr-0 pl-2">
-            <a href="" class="media_social text-decoration-none">
+        <div class="col mt-3 mr-0 ml-0 pr-0 ">
+            <a href="" class="media_social text-decoration-none ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                     <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
                 </svg>
             </a>
-            <a href="" class="media_social text-decoration-none">
+            <a href="" class="media_social text-decoration-none ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
                     <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
                 </svg>
             </a>
-            <a href="" class="media_social text-decoration-none">
+            <a href="" class="media_social text-decoration-none ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                     <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
                 </svg>
             </a>
-            <a href="" class="media_social text-decoration-none">
+            <a href="" class="media_social text-decoration-none ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                     <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
                 </svg>
             </a>
-            <a href="" class="media_social text-decoration-none">
+            <a href="" class="media_social text-decoration-none ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/>
                   </svg>
@@ -136,5 +142,4 @@
         </div>
     </footer>
 </body>
-
 </html>
