--- a/Site/Web2/index.html
+++ b/Site/Web2/index.html
@@ -62,7 +62,7 @@
     </header>
 
     <div class="row d-block m-0" id="top_container">
-        <div id="img_1" class="">
+        <div id="img_1" class="" >
         </div>
         <div id="text_proj" class="text">
             <p>Projeto de otimização para coleta de resíduos em Institutos Federais</p>
@@ -71,8 +71,8 @@
 
     <div class="row m-0">
         <div class="col-12 container-fluid shadow mt-2" id="c_white">
-            <div class="row mx-auto ">
-                <div class="col">
+            <div class="row mx-auto container-fluid">
+                <div class="col col-md-6">
                     <h2 class="container m-3 h2_blue ">Quem somos</h2>
                     <div id="text_black" class="container-fluid m-3  mx-auto text-justify">
                         <p>Trabalho interdisciplinar envolvendo disciplinas do 4º período do curso de Sistemas de
@@ -81,18 +81,18 @@
                         <a href="#" class="btn btn-outline-primary m-0 " role="button">Veja no Github</a>
                     </div>
                 </div>
-                <div class="col container-fluid align-middle d-none d-md-block">
-                    <img src="/image/rere.png" alt="" class="mx-auto d-block " width="30%">
+                <div class="col-6 container-fluid align-middle  d-none d-md-block">
+                    <img src="/image/rere.png" alt="" class="mx-auto d-block" id="i_img1">
                 </div>
             </div>
         </div>
 
-        <div class="col-12" id="c_blue">
+        <div class="col-12 container-fluid shadow mt-2" id="c_blue">
             <div class="row mx-auto container-fluid">
-                <div class="col container-fluid align-middle d-none d-md-block">
-                    <img src="/image/recic.jpg" alt="" class="mx-auto d-block" width="30%">
+                <div class="col-6 container-fluid align-middle  d-none d-md-block">
+                    <img src="/image/recic.jpg" alt="" class="mx-auto d-block " id="i_img2">
                 </div>
-                <div class="col">
+                <div class="col col-md-6">
                     <h2 class="container m-3 h2_white ">Foco Principal</h2>
                     <div id="text_white" class="container-fluid m-3  mx-auto text-justify">
                         <p>O projeto seria aplicado em diversos Campus e Instalações de pontos de reciclagem em
@@ -105,8 +105,8 @@
         </div>
 
         <div class="col-12 container-fluid shadow mt-2" id="c_white">
-            <div class="row mx-auto ">
-                <div class="col">
+            <div class="row mx-auto container-fluid">
+                <div class="col col-md-6">
                     <h2 class="container m-3 h2_blue">Sabará</h2>
                     <div id="text_black" class="container-fluid m-3  mx-auto text-justify">
                         <p>Nosso primeiro "cliente" será o Campus IFMG Sabará, que é o justamente o local de estudo dos
@@ -114,28 +114,28 @@
                             integrantes do grupo decidiram começar por ele mesmo.</p>
                     </div>
                 </div>
-                <div class="col container-fluid align-middle d-none d-md-block">
-                    <img src="/image/ifsaba.jpg" alt="" class="mx-auto d-block" width="30%">
+                <div class="col-6 container-fluid align-middle  d-none d-md-block">
+                    <img src="/image/ifsaba.jpg" alt="" class="mx-auto d-block" id="i_img3">
                 </div>
             </div>
         </div>
 
-        <div class="col-12 container-fluid shadow mt-2" id="c_blue">
-            <div class="row mx-auto container-fluid">
-                <div class="col container-fluid align-middle d-none d-md-block">
-                    <img src="/image/ifbambu.jpg" alt="" class="mx-auto d-block" width="30%">
-                </div>
-                <div class="col">
-                    <h2 class="container m-3 h2_white ">Bambuí</h2>
-                    <div id="text_white" class="container-fluid m-3  mx-auto text-justify">
-                        <p>Por questão de praticidade também, o próximo Campus a ser aplicado seria o Bambuí pela
-                            proximidade de local e de interação com o Campus, seria uma ótima escolha pra segundo local
-                            do projeto.</p>
-                    </div>
+        <div class="col-12 container-fluid shadow mt-2 " id="c_blue">
+        <div class="row mx-auto container-fluid">
+            <div class="col-6 container-fluid align-middle  d-none d-md-block">
+                <img src="/image/ifbambu.jpg" alt="" class="mx-auto d-block" id="i_img4">
+            </div>
+            <div class="col col-md-6">
+                <h2 class="container m-3 h2_white">Bambuí</h2>
+                <div id="text_white" class="container-fluid m-3 mx-auto text-justify">
+                    <p>Por questão de praticidade também, o próximo Campus a ser aplicado seria o Bambuí pela
+                        proximidade de local e de interação com o Campus, seria uma ótima escolha pra segundo local
+                        do projeto.</p>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
 
     <!-- Rodapé -->
