--- a/Site/Web2/feedback_aluno.html
+++ b/Site/Web2/feedback_aluno.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="./css/estiloFeedbackAluno.css">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -95,17 +96,24 @@
         </nav>
     </header>
     <div class="indiciplina justify-content-center " id="c_blue">
-        <h1>Feedback</h1>
+        <h1 class="text-center p-4">Feedback</h1>
         <div id="content">
-            <span>Pontos de coleta perto de você:</span>
-            <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3752.2874212368697!2d-43.84058568446949!3d-19.87008174158164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa69d5bd0d95c27%3A0x779dd569368a90d4!2sInstituto%20Federal%20de%20Minas%20Gerais%20Campus%20Sabar%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1619464961242!5m2!1spt-BR!2sbr"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" frameborder="0"
-                    style="border:0 " allowfullscreen></iframe>
+            <h2 class="m-4">Conte para nós sua visão, dúvidas e reclamações:</h2>
+            <div class="boxText">
+                <select class="w-25 p-1"  id="inputCampus" class="form-control" required>
+                <option class="dropdown-item" selected>Campus</option>
+                <option class="dropdown-item">...</option>
             </div>
+                
+            </select>
+            <div class="boxText">
+                <input class="w-25" type="text" id="titulo" name="Nome" size="40" placeholder="Digite aqui o título/tema"/> 
+            </div>
+            <div class="boxText">
+                <input class="w-25" type="text" id="feedback" name="Nome" size="80" placeholder="Digite aqui seu feedback"/> 
+            </div>
+            
         </div>
-    </div>
 
     <!-- Rodapé -->
     <footer class="row text-center mt-3 ml-0 mr-0 mb-3 p-0" id="rodape">
@@ -154,6 +162,7 @@
             </a>
         </div>
     </footer>
+</div>
 </body>
 
 </html>
