Criando Classe format e alterando c_blue

--- a/Site/Web2/cadastro.html
+++ b/Site/Web2/cadastro.html
@@ -59,7 +59,7 @@
             </div>
         </nav>
     </header>
-    <div class="indiciplina justify-content-center " id="c_blue">
+    <div class="indiciplina justify-content-center format">
         <form class="container-fluid justify-content-center pt-lg-5" id="c_blue">
             <h1 class="text-center p-4">Cadastro</h1>
             <div class="form-row">
