--- a/Site/Web2/index.html
+++ b/Site/Web2/index.html
@@ -25,34 +25,34 @@
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container-fluid">
                 <a class="navbar-brand js-scroll-trigger" id="nameproj">
-                    <svg  width="35" height="30" viewBox="0 0 33 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="35" height="30" viewBox="0 0 33 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M13.6321 0.688052L3.60807 4.00531C2.30584 4.43625 1.86612 4.69046 1.43338 5.0564C1.00063 5.42235 0.681173 5.86487 0.469898 6.39102C0.258623 6.91716 0.155533 7.41486 0.155533 8.78777V23.7661C0.155533 24.4336 0.224963 24.6756 0.35534 24.9196C0.485716 25.1637 0.677038 25.3552 0.92082 25.4857C1.1646 25.6162 1.40641 25.6857 2.07324 25.6857H30.8991C31.5659 25.6857 31.8077 25.6162 32.0515 25.4857C32.2953 25.3552 32.4866 25.1637 32.617 24.9196C32.7474 24.6756 32.8168 24.4336 32.8168 23.7661V8.75484C32.8168 7.39118 32.7157 6.89702 32.5077 6.37391C32.2998 5.85081 31.985 5.41008 31.5578 5.04383C31.1307 4.67759 30.6963 4.42185 29.4073 3.98053L19.8845 0.720191C18.5429 0.260842 18.0804 0.141504 17.5456 0.0618076C17.0108 -0.017889 16.5133 -0.0204465 15.9777 0.0537482C15.4421 0.127943 14.9784 0.24252 13.6321 0.688052ZM2.64876 23.19H10.9175V10.5599C10.9175 10.0077 11.3652 9.55994 11.9175 9.55994H21.0549C21.6071 9.55994 22.0549 10.0077 22.0549 10.5599V23.19H30.3236V8.75484C30.3236 7.78756 30.2885 7.54145 30.1912 7.29663C30.1326 7.14932 30.0562 7.04241 29.9359 6.93927C29.736 6.76787 29.5148 6.65496 28.6004 6.34192L19.0777 3.08157C17.9373 2.69116 17.5658 2.58802 17.1785 2.53029C16.8786 2.48561 16.6198 2.48428 16.3195 2.52588C15.9316 2.57962 15.559 2.67893 14.4147 3.05761L4.39068 6.37486C3.46809 6.68017 3.2448 6.79166 3.04237 6.96284C2.92043 7.06596 2.84278 7.17351 2.78324 7.32178C2.68442 7.5679 2.64876 7.81511 2.64876 8.78777V23.19Z"
                             fill="white" />
                     </svg>
                     TrashMap</a>
-                <button class="navbar-toggler navbar-toggler-right" style="color: white; border-color: white;" type="button" data-toggle="collapse"
-                    data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler navbar-toggler-right" style="color: white; border-color: white;"
+                    type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
+                        <!-- <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="#sobre">Sobre</a>
+                        </li> -->
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="">Sobre</a>
+                            <a class="nav-link js-scroll-trigger" href="#proj">O Projeto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="">O Projeto</a>
+                            <a class="nav-link js-scroll-trigger" href="#rodape">Contato</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="">Contato</a>
+                            <a class="nav-link" href="/cadastro.html">Cadastro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="cadastro.html">Cadastro</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="">
+                            <a class="nav-link js-scroll-trigger" href="/login.html">
                                 <i class="bi bi-person"></i>Login</a>
                         </li>
                     </ul>
@@ -62,23 +62,23 @@
     </header>
 
     <div class="row d-block m-0" id="top_container">
-        <div id="img_1" class="" >
+        <div id="img_1" class="">
         </div>
         <div id="text_proj" class="text">
             <p>Projeto de otimização para coleta de resíduos em Institutos Federais</p>
         </div>
     </div>
 
-    <div class="row m-0">
+    <div class="row m-0" id="proj">
         <div class="col-12 container-fluid shadow mt-2" id="c_white">
             <div class="row mx-auto container-fluid">
                 <div class="col col-md-6">
-                    <h2 class="container m-3 h2_blue ">Quem somos</h2>
+                    <h2 class="container m-3 h2_blue">Quem somos</h2>
                     <div id="text_black" class="container-fluid m-3  mx-auto text-justify">
                         <p>Trabalho interdisciplinar envolvendo disciplinas do 4º período do curso de Sistemas de
                             Informação. Nosso github com as versões e codificações do projeto. O projeto foi feito por 5
                             alunos do 4º período VFeRoma(Bruno, Felipe, Rodrigo, Marcos, Mateus).</p>
-                        <a href="#" class="btn btn-outline-primary m-0 " role="button">Veja no Github</a>
+                        <a href="https://github.com/mateusfilipe/VFeRoma" class="btn btn-outline-primary m-0 " role="button" id="btn_git">Veja no Github</a>
                     </div>
                 </div>
                 <div class="col-6 container-fluid align-middle  d-none d-md-block">
@@ -121,33 +121,34 @@
         </div>
 
         <div class="col-12 container-fluid shadow mt-2 " id="c_blue">
-        <div class="row mx-auto container-fluid">
-            <div class="col-6 container-fluid align-middle  d-none d-md-block">
-                <img src="/image/ifbambu.jpg" alt="" class="mx-auto d-block" id="i_img4">
-            </div>
-            <div class="col col-md-6">
-                <h2 class="container m-3 h2_white">Bambuí</h2>
-                <div id="text_white" class="container-fluid m-3 mx-auto text-justify">
-                    <p>Por questão de praticidade também, o próximo Campus a ser aplicado seria o Bambuí pela
-                        proximidade de local e de interação com o Campus, seria uma ótima escolha pra segundo local
-                        do projeto.</p>
+            <div class="row mx-auto container-fluid">
+                <div class="col-6 container-fluid align-middle  d-none d-md-block">
+                    <img src="/image/ifbambu.jpg" alt="" class="mx-auto d-block" id="i_img4">
+                </div>
+                <div class="col col-md-6">
+                    <h2 class="container m-3 h2_white">Bambuí</h2>
+                    <div id="text_white" class="container-fluid m-3 mx-auto text-justify">
+                        <p>Por questão de praticidade também, o próximo Campus a ser aplicado seria o Bambuí pela
+                            proximidade de local e de interação com o Campus, seria uma ótima escolha pra segundo local
+                            do projeto.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 
     <!-- Rodapé -->
     <footer class="row text-center mt-3 ml-0 mr-0 mb-3 p-0" id="rodape">
-        <a class="navbar-brand js-scroll-trigger col d-none d-md-block mt-md-2 mt-lg-3 p-2 mb-3" id="nameproj">
-            <svg width="33" height="26" viewBox="0 0 33 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <a class="navbar-brand js-scroll-trigger col d-none d-md-block mt-md-2  mt-lg-2 mt-xl-2 mt-md-3 p-2" id="nameproj">
+            <svg width="33" height="26" viewBox="0 0 33 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                     d="M13.6321 0.688052L3.60807 4.00531C2.30584 4.43625 1.86612 4.69046 1.43338 5.0564C1.00063 5.42235 0.681173 5.86487 0.469898 6.39102C0.258623 6.91716 0.155533 7.41486 0.155533 8.78777V23.7661C0.155533 24.4336 0.224963 24.6756 0.35534 24.9196C0.485716 25.1637 0.677038 25.3552 0.92082 25.4857C1.1646 25.6162 1.40641 25.6857 2.07324 25.6857H30.8991C31.5659 25.6857 31.8077 25.6162 32.0515 25.4857C32.2953 25.3552 32.4866 25.1637 32.617 24.9196C32.7474 24.6756 32.8168 24.4336 32.8168 23.7661V8.75484C32.8168 7.39118 32.7157 6.89702 32.5077 6.37391C32.2998 5.85081 31.985 5.41008 31.5578 5.04383C31.1307 4.67759 30.6963 4.42185 29.4073 3.98053L19.8845 0.720191C18.5429 0.260842 18.0804 0.141504 17.5456 0.0618076C17.0108 -0.017889 16.5133 -0.0204465 15.9777 0.0537482C15.4421 0.127943 14.9784 0.24252 13.6321 0.688052ZM2.64876 23.19H10.9175V10.5599C10.9175 10.0077 11.3652 9.55994 11.9175 9.55994H21.0549C21.6071 9.55994 22.0549 10.0077 22.0549 10.5599V23.19H30.3236V8.75484C30.3236 7.78756 30.2885 7.54145 30.1912 7.29663C30.1326 7.14932 30.0562 7.04241 29.9359 6.93927C29.736 6.76787 29.5148 6.65496 28.6004 6.34192L19.0777 3.08157C17.9373 2.69116 17.5658 2.58802 17.1785 2.53029C16.8786 2.48561 16.6198 2.48428 16.3195 2.52588C15.9316 2.57962 15.559 2.67893 14.4147 3.05761L4.39068 6.37486C3.46809 6.68017 3.2448 6.79166 3.04237 6.96284C2.92043 7.06596 2.84278 7.17351 2.78324 7.32178C2.68442 7.5679 2.64876 7.81511 2.64876 8.78777V23.19Z"
                     fill="#005FF9" />
             </svg>
-            TrashMap</a>
-        <div class="col mt-3 mr-0 ml-0 pr-0 mb-4 mt-4 ">
+            TrashMap
+        </a>
+        <div class="col mt-3 mr-0 ml-0 pr-0 mb-4 mt-lg-3 mt-md-3 mt-xl-2">
             <a href="" class="media_social text-decoration-none">
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                     class="bi bi-facebook" viewBox="0 0 16 16">
