--- a/Site/Web2/login.html
+++ b/Site/Web2/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt_br" style="height: 100vh;">
+<html lang="pt_br">
 
 <head>
     <title>TrashMap-VFeRoma</title>
@@ -18,7 +18,7 @@
 </head>
 
 
-<body class="" >
+<body class="">
     <!-- Cabeçalho -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light" id="subNav">
@@ -40,19 +40,20 @@
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger ml-sm-auto" href="index.html">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#005FF9"
-                                    class="bi bi-house-door" viewBox="0 0 16 16">
+                                    class="bi bi-house-door" viewBox="0 0 16 19">
                                     <path
                                         d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z" />
                                 </svg>
                                 Inicio</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link js-scroll-trigger" href="">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#005FF9"
-                                    class="bi bi-person" viewBox="0 0 16 16">
+                            <a class="nav-link js-scroll-trigger" href="/cadastro.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
+                                    class="bi bi-plus-circle-dotted" viewBox="0 0 16 18">
                                     <path
-                                        d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
-                                </svg>Login</a>
+                                        d="M8 0c-.176 0-.35.006-.523.017l.064.998a7.117 7.117 0 0 1 .918 0l.064-.998A8.113 8.113 0 0 0 8 0zM6.44.152c-.346.069-.684.16-1.012.27l.321.948c.287-.098.582-.177.884-.237L6.44.153zm4.132.271a7.946 7.946 0 0 0-1.011-.27l-.194.98c.302.06.597.14.884.237l.321-.947zm1.873.925a8 8 0 0 0-.906-.524l-.443.896c.275.136.54.29.793.459l.556-.831zM4.46.824c-.314.155-.616.33-.905.524l.556.83a7.07 7.07 0 0 1 .793-.458L4.46.824zM2.725 1.985c-.262.23-.51.478-.74.74l.752.66c.202-.23.418-.446.648-.648l-.66-.752zm11.29.74a8.058 8.058 0 0 0-.74-.74l-.66.752c.23.202.447.418.648.648l.752-.66zm1.161 1.735a7.98 7.98 0 0 0-.524-.905l-.83.556c.169.253.322.518.458.793l.896-.443zM1.348 3.555c-.194.289-.37.591-.524.906l.896.443c.136-.275.29-.54.459-.793l-.831-.556zM.423 5.428a7.945 7.945 0 0 0-.27 1.011l.98.194c.06-.302.14-.597.237-.884l-.947-.321zM15.848 6.44a7.943 7.943 0 0 0-.27-1.012l-.948.321c.098.287.177.582.237.884l.98-.194zM.017 7.477a8.113 8.113 0 0 0 0 1.046l.998-.064a7.117 7.117 0 0 1 0-.918l-.998-.064zM16 8a8.1 8.1 0 0 0-.017-.523l-.998.064a7.11 7.11 0 0 1 0 .918l.998.064A8.1 8.1 0 0 0 16 8zM.152 9.56c.069.346.16.684.27 1.012l.948-.321a6.944 6.944 0 0 1-.237-.884l-.98.194zm15.425 1.012c.112-.328.202-.666.27-1.011l-.98-.194c-.06.302-.14.597-.237.884l.947.321zM.824 11.54a8 8 0 0 0 .524.905l.83-.556a6.999 6.999 0 0 1-.458-.793l-.896.443zm13.828.905c.194-.289.37-.591.524-.906l-.896-.443c-.136.275-.29.54-.459.793l.831.556zm-12.667.83c.23.262.478.51.74.74l.66-.752a7.047 7.047 0 0 1-.648-.648l-.752.66zm11.29.74c.262-.23.51-.478.74-.74l-.752-.66c-.201.23-.418.447-.648.648l.66.752zm-1.735 1.161c.314-.155.616-.33.905-.524l-.556-.83a7.07 7.07 0 0 1-.793.458l.443.896zm-7.985-.524c.289.194.591.37.906.524l.443-.896a6.998 6.998 0 0 1-.793-.459l-.556.831zm1.873.925c.328.112.666.202 1.011.27l.194-.98a6.953 6.953 0 0 1-.884-.237l-.321.947zm4.132.271a7.944 7.944 0 0 0 1.012-.27l-.321-.948a6.954 6.954 0 0 1-.884.237l.194.98zm-2.083.135a8.1 8.1 0 0 0 1.046 0l-.064-.998a7.11 7.11 0 0 1-.918 0l-.064.998zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
+                                </svg>
+                                Cadastro</a>
                         </li>
                     </ul>
                 </div>
@@ -60,10 +61,10 @@
         </nav>
     </header>
 
-    <div class="indiciplina justify-content-center " id="c_blue">
-        <form class="container-fluid justify-content-center pt-lg-5" id="c_blue">
-            <h1 class="text-center p-4">Login</h1>
-            <div class="form-row justify-content-center" id="barraInput">
+    <div class="indiciplina justify-content-center" id="c_blue">
+        <form class="container-fluid justify-content-center pt-lg-5 " id="c_blue">
+            <h1 class="text-center">Login</h1>
+            <div class="form-row justify-content-center pt-3 pt-lg-2 pb-3" id="barraInput">
                 <div class="form-group col-md-12 col-lg-6">
                     <label>Usuário</label>
                     <input type="text" class="form-control " id="inputName" placeholder="Insira seu nome">
@@ -75,13 +76,14 @@
                     <input type="password" class="form-control" id="inputPassword" placeholder="Digite sua senha">
                 </div>
             </div>
-            <div class="form-row justify-content-center " id="login">
-                <button type="submit" class="btn btn-outline-light" id="criar">Logar</button>
-            </div>   
-            <span class="form-row justify-content-center ">Não está cadastrado? Crie sua conta!</span>          
+            <div class="form-row justify-content-center pt-4 pt-xl-5" id="login">
+                <button type="submit" class="btn btn-outline-light" id="logar">Logar</button>
+            </div>
+            <span class="form-row justify-content-center pt-5 pt-md-3 text-decoration-none">Não está cadastrado? <a
+                    class="text-decoration-none pl-2" href="/cadastro.html" id="crie"> Crie sua conta!</a></span>
         </form>
     </div>
-    
+
     <!-- Rodapé -->
     <footer class="row text-center mt-3 ml-0 mr-0 mb-3 p-0" id="rodape">
         <a class="navbar-brand js-scroll-trigger col d-none d-md-block mt-md-2 mt-lg-3 p-2 " id="nameproj">
