--- a/Site/Web2/index_aluno.html
+++ b/Site/Web2/index_aluno.html
@@ -38,40 +38,45 @@
                 <div class="collapse navbar-collapse " id="navbarResponsive">
                     <ul class="navbar-nav  ml-md-auto">
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger ml-sm-auto" href="index.html">
+                            <a class="nav-link js-scroll-trigger " href="index.html">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#005FF9"
-                                    class="bi bi-house-door" viewBox="0 0 16 16">
+                                    class="bi bi-house-door" viewBox="0 0 16 19">
                                     <path
                                         d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z" />
                                 </svg>
                                 Inicio</a>
                         </li>
-                        <li class="nav-item ">
-                            <a class="nav-link js-scroll-trigger ml-sm-auto" href="">Ranking</a>
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="">Ranking</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link js-scroll-trigger ml-sm-auto" href="">Feedback</a>
+                            <a class="nav-link js-scroll-trigger" href="">Feedback</a>
                         </li>
-                        <ul class="navbar-nav  ml-md-auto menu">
+                        <ul class="navbar-nav menu">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toogle " data-toggle="dropdown" id="navDrop" href="">
+                                <a class="nav-link dropdown-toogle " id="menuD" data-toggle="dropdown" id="navDrop" href="">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                        class="bi bi-person-circle" viewBox="0 0 16 16">
+                                        class="bi bi-person-circle" viewBox="0 0 16 19">
                                         <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
                                         <path fill-rule="evenodd"
                                             d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
                                     </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
+                                        class="bi bi-chevron-down" viewBox="0 0 16 20">
+                                        <path fill-rule="evenodd"
+                                            d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                                    </svg>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right " aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" href="">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                            fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                                            fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 19">
                                             <path
                                                 d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                                         </svg> Conta</a>
                                     <a class="dropdown-item" href="">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                            fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                                            fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 19">
                                             <path
                                                 d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z" />
                                         </svg> Mensagens</a>
@@ -80,7 +85,7 @@
                         </ul>
                         <li>
                             <a class="nav-link js-scroll-trigger ml-sm-auto" href="cadastro.html">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#005FF9"
                                     class="bi bi-box-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
