--- a/Site/Web2/index_adm.html
+++ b/Site/Web2/index_adm.html
@@ -92,27 +92,30 @@
         </nav>
     </header>
 
-    <div class="indiciplina justify-content-center " id="c_blue">
+    <div class="indiciplina justify-content-center row" id="c_blue">
         <h1>Bem vindo Cody Simmmons</h1>
-        <div id="content">
-            <span>Pontos de coleta perto de você:</span>
-            <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3752.2874212368697!2d-43.84058568446949!3d-19.87008174158164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa69d5bd0d95c27%3A0x779dd569368a90d4!2sInstituto%20Federal%20de%20Minas%20Gerais%20Campus%20Sabar%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1619464961242!5m2!1spt-BR!2sbr"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" frameborder="0"
-                    style="border:0 " allowfullscreen></iframe>
+        <div class=" container-fluid row">
+            <div id="content" class="col">
+                <span>Pontos de coleta perto de você:</span>
+                <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3752.2874212368697!2d-43.84058568446949!3d-19.87008174158164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa69d5bd0d95c27%3A0x779dd569368a90d4!2sInstituto%20Federal%20de%20Minas%20Gerais%20Campus%20Sabar%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1619464961242!5m2!1spt-BR!2sbr"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" frameborder="0"
+                        style="border:0 " allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="text col">
+                <h2 class="container m-3 h2_white">Quantidade coletada</h2>
+                    <div id="text_white" class="container-fluid m-3  mx-auto text-justify">
+                        <p>X KG</p>
+                    </div>
+                <h2 class="container m-3 h2_wite">Ranqueamento escolar</h2>
+                    <div id="text_white" class="container-fluid m-3  mx-auto text-justify">
+                        <p>X° Lugar</p>
+                    </div>   
             </div>
         </div>
-        <div class="text">
-            <h2 class="container m-3 h2_blue">Quantidade coletada</h2>
-                <div id="text_black" class="container-fluid m-3  mx-auto text-justify">
-                    <p>X KG</p>
-                </div>
-            <h2 class="container m-3 h2_blue">Ranqueamento escolar</h2>
-                <div id="text_black" class="container-fluid m-3  mx-auto text-justify">
-                    <p>X° Lugar</p>
-                </div>   
-        </div>
+        
         
     </div>
 
