--- a/Site/Web2/index_aluno.html
+++ b/Site/Web2/index_aluno.html
@@ -36,7 +36,7 @@
                     Menu
                 </button>
                 <div class="collapse navbar-collapse " id="navbarResponsive">
-                    <ul class="navbar-nav  ml-md-auto">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger " href="index.html">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#005FF9"
@@ -62,7 +62,7 @@
                                             d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
                                     </svg>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
-                                        class="bi bi-chevron-down" viewBox="0 0 16 20">
+                                        class="bi bi-chevron-down d-md-none" viewBox="0 0 16 20">
                                         <path fill-rule="evenodd"
                                             d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
                                     </svg>
@@ -83,23 +83,26 @@
                                 </div>
                             </li>
                         </ul>
-                        <li>
-                            <a class="nav-link js-scroll-trigger ml-sm-auto" href="cadastro.html">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#005FF9"
-                                    class="bi bi-box-arrow-right" viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd"
-                                        d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
-                                    <path fill-rule="evenodd"
-                                        d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
-                                </svg>
-                            </a>
-                        </li>
-
                     </ul>
                 </div>
+                <ul class="navbar-nav menu">
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="/index.html">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#005FF9"
+                                class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
+                                <path fill-rule="evenodd"
+                                    d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+                
             </div>
         </nav>
     </header>
+
     <div class="indiciplina justify-content-center " id="c_blue">
         <h1>Bem vindo Cody Simmmons</h1>
         <div id="content">
